mame (0.202+dfsg.1-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Remove full CC0 text from debian/copyright and add a pointer to
    common-licenses.

 -- Jordi Mallach <jordi@debian.org>  Sun, 21 Oct 2018 02:21:11 +0200

mame (0.201+dfsg.1-1) experimental; urgency=medium

  * New upstream release.
  * Use HTTPS for links to mamedev.org.
  * Set Rules-Requires-Root to no.
  * Update Standards-Version to 4.2.1.

 -- Jordi Mallach <jordi@debian.org>  Tue, 11 Sep 2018 23:56:25 +0200

mame (0.200+dfsg.1-1) unstable; urgency=medium

  * New upstream release.
  * Use system libasio and libpugixml. Update B-D accordingly.
  * Make use of the gold linker conditional to availability.
  * Drop usage of system asio, as it does not build with current versions
    in unstable or experimental.

 -- Jordi Mallach <jordi@debian.org>  Wed, 01 Aug 2018 13:41:17 +0200

mame (0.199+dfsg.1-1) unstable; urgency=medium

  * New upstream release.

 -- Jordi Mallach <jordi@debian.org>  Fri, 20 Jul 2018 16:25:34 +0200

mame (0.196+dfsg.1-1) unstable; urgency=medium

  * New upstream release.
  * Update Vcs-* fields to reflect migration to salsa.debian.org.
  * Remove fix_c_fallback.patch, which was taken from git.

 -- Jordi Mallach <jordi@debian.org>  Fri, 20 Jul 2018 12:13:33 +0200

mame (0.195+dfsg.1-2) unstable; urgency=medium

  [ Cesare Falco ]
  * Use Gold linker and set ld flags to reduce memory.

  [ Jordi Mallach ]
  * Add B-D-I on python3-distutils so Sphynx works as expected.
  * Move links and doc-base paths to new default location of docs.
  * Add patch to fix an infinite loop in the fallback C code for
    mips*, arm*, s390x, and other arches with no native ASM. This
    fixes the validation tests for the check build rule.
  * Set OPTIMIZE=2 to avoid memory exhaustion on i386 builds.
  * Upload to unstable, rapidjson (>= 1.0) is now available there.

 -- Jordi Mallach <jordi@debian.org>  Thu, 22 Mar 2018 22:26:55 +0100
