@@ -232,9 +232,3 @@ override_dh_fixperms-indep:
 
 PKD := $(abspath $(dir $(MAKEFILE_LIST)))
 VER ?= $(shell dpkg-parsechangelog -l$(PKD)/changelog --show-field=Version | sed -e 's/\(.*\)-.*/\1/')
-
-.PHONY: get-orig-source
-get-orig-source:
-	uscan --noconf --verbose --rename --destdir=$(CURDIR) \
-        --check-dirname-level=0 --overwrite-download \
-        --download-version $(VER) $(PKD)
